gccida/g0/walk_tree
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1571:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+2Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1580:14: error: expected identifier or '('
 struct htab = ( htab_t)htab_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1590:7: error: expected expression
if (  struct htab ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1604:56: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( !statement_code_p( code) && code != TREE_LIST && !lang_hooks_0.tree_inlining.tree_chain_matters_p( *tp) ) 
                                                       ^~~~~~~~~~~~
                                                       lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1604:103: error: called object type '<dependent type>' is not a function or function pointer
if ( !statement_code_p( code) && code != TREE_LIST && !lang_hooks_0.tree_inlining.tree_chain_matters_p( *tp) ) 
                                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1650:10: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
result = lang_hooks_0.tree_inlining.walk_subtrees( tp, &walk_subtrees, func, data, htab); 
         ^~~~~~~~~~~~
         lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1650:50: error: called object type '<dependent type>' is not a function or function pointer
result = lang_hooks_0.tree_inlining.walk_subtrees( tp, &walk_subtrees, func, data, htab); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1723:13: error: expected identifier or '('
 struct arg = ( *tp)->type.values; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/tree-inline.c:1731:13: error: expected identifier or '('
 struct arg = arg->common.chain; 
            ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/walk_tree/src/obj/tree-inline.o] Error 1
